examples/test/testpolicy14688.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14688
  namespace: namespace349
spec:
  podSelector:
    matchLabels:
      key7: value47
      key32: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value33
          key14: value19
      podSelector:
        matchLabels:
          key45: value4
          key38: value46
